03_web/svc-web-b.yml
---
kind: Service
apiVersion: v1
metadata:
  name: svc-web-b
  labels:
    app: web
    site: web-b
spec:
  type: LoadBalancer
  selector:
    app: httpd
    site: web-b
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: web-b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpd
      site: web-b
  template:
    metadata:
      labels:
        app: httpd
        site: web-b
    spec:
      containers:
      - name: httpd
        image: gowatana/centos7:httpd
        ports:
        - containerPort: 80
          protocol: TCP
        command:
        - bash
        - -c
        - |
          N=$(uname -n)
          HTML=/var/www/html/index.html
          echo '<h1>Demo Site <font color=blue>B</font></h1>' > $HTML
          echo 'Pod: ' $N >> $HTML
          httpd -D FOREGROUND
