03_web/ingress_web-example_host.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-example
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test-web-01.go-lab.jp
    http:
      paths:
      - path: /a
        backend:
          serviceName: svc-web-a
          servicePort: 80
      - path: /b
        backend:
          serviceName: svc-web-b
          servicePort: 80
